--- a/index.html
+++ b/index.html
@@ -15,30 +15,57 @@
   </style>
 </head>
 <body>
+  <div>
+    <!--h1 class="cabecalho"> SPLITTER</h1-->
+    <img class="cabecalho_imagem" src="images/logo.svg" alt="logo da calculadora SPLITTER">
+  </div>
 
-  Bill
+<!-- _____________________________________________________________________-->
+<main>
+  <div class="conta">
+    
+        <label for="ContaTotal"> Conta</label>
+        <input type="text" class="contaTotal"  placeholder="0">
+  </div>
+<!-- _____________________________________________________________________-->
+  <div class="gorjeta">
+         <label for="EscolhaValorGorjeta"> Selecione a %</label>
+       <input type="submit" value="5%" class="gorjeta-valor">
+       <input type="submit" value="10%" class="gorjeta-valor">
+       <input type="submit" value="15%" class="gorjeta-valor">
+       <input type="submit" value="20%" class="gorjeta-valor">
+       <input type="submit" value="25%" class="gorjeta-valor">
+       <input type="submit" value="50%" class="gorjeta-valor">
+       <input type="number" name="personalizado" class="gorjetaValor">
+  </div>
+  <!-- _____________________________________________________________________-->
+  </div class="dividir-conta">
+        <label for="NumeroPessoas"> Número de Pessoas</label>
+       <input type="text" id="numero de pessoas" class="numeroPessoas" required>
+   <div>
+  <!-- _____________________________________________________________________-->
+   <div class="valor-pessoa">
+    <label for="ValorPorPessoa"> Valor da Gorjeta</label>
+    <input type="text" id="valor por pessoa" class="valorPessoa" required>
+   </div> 
+  <!-- _____________________________________________________________________-->
+    <div class="total-pessoa">
+    <label for="TotalPorPessoa"> Total</label>
+    <input type="text" id="total por  pessoa" class="totalPessoa" required>
+   </div> 
+   <!-- _____________________________________________________________________-->
+    <div class="reset">
+     <input type="submit" value="Limpar" class="enviar">
+    </div>
+ </div>
+</main>
 
-  Select Tip %
-  5%
-  10%
-  15%
-  25%
-  50%
-  Custom
-
-  Number of People
-
-  Tip Amount
-  / person
-
-  Total
-  / person
-
-  Reset
+<script src="gorjeta.js"></script>
+  
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Janaina</a>.
   </div>
 </body>
 </html>
